Upgrade to FET 5.27.7
- Added a partial Basque translation, by Asier Urio Larrea.
- Added a partial Czech translation, by Pavel Fric.
- Improvement in the all time / space constraints dialogs: you can press activate / deactivate / modify the constraint and the focus will remain on the constraints list widget, so that you can press the up / down arrows directly, for easier operation (suggested by Volker Dirr).

--- a/THANKS
+++ b/THANKS
@@ -397,3 +397,7 @@ Mohamed NAJARI - suggestions.
 youssouf - suggestion.
 
 Pascal Cohen - French translation.
+
+Asier Urio Larrea - Basque translation.
+
+Pavel Fric - Czech translation.
