--- a/ChangeLog
+++ b/ChangeLog
@@ -1802,4 +1802,9 @@ Versions 5.27.0 - 5.27.v
 	- Minor improvements.
 - Version 5.27.6
 	- Updated the sources to gcc-5.2.1 (but the Windows version still uses MinGW 4.9.2).
-	- Minor improvements for the timetable and the statistics printing, by Volker Dirr (improved the margins handling).
+	- Minor improvements to the timetable and the statistics printing, by Volker Dirr (improved the margins handling).
+- Version 5.27.7
+	- Added a partial Basque translation, by Asier Urio Larrea.
+	- Added a partial Czech translation, by Pavel Fric.
+	- Improvement in the all time / space constraints dialogs: you can press activate / deactivate / modify the constraint and the focus
+	will remain on the constraints list widget, so that you can press the up / down arrows directly, for easier operation (suggested by Volker Dirr).
