--- a/THANKS
+++ b/THANKS
@@ -401,3 +401,5 @@ Pascal Cohen - French translation.
 Asier Urio Larrea - Basque translation.
 
 Pavel Fric - Czech translation.
+
+Michel - bug report.
