Upgrade to FET 5.27.9
- Corrected some typos (reported by locutusofborg).
- Added a section Keywords in the fet.desktop file (reported by locutusofborg).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1809,4 +1809,7 @@ Versions 5.27.0 - 5.27.v
 	- Improvement in the all time / space constraints dialogs: you can press activate / deactivate / modify the constraint and the focus
 	will remain on the constraints list widget, so that you can press the up / down arrows directly, for easier operation (suggested by Volker Dirr).
 - Version 5.27.8
-	- Corrected a compilation bug under Qt ( >= 5.0 and <5.3 ) (reported by Michel).
+	- Corrected a compilation bug under Qt ( >= 5.0 and < 5.3 ) (reported by Michel).
+- Version 5.27.9
+	- Corrected some typos (reported by locutusofborg).
+	- Added a section Keywords in the fet.desktop file (reported by locutusofborg).
