--- a/THANKS
+++ b/THANKS
@@ -403,3 +403,9 @@ Asier Urio Larrea - Basque translation.
 Pavel Fric - Czech translation.
 
 Michel - bug report.
+
+MilesM - suggestion.
+
+adso - suggestions.
+
+locutusofborg - suggestions.
