--- a/THANKS
+++ b/THANKS
@@ -409,3 +409,7 @@ MilesM - suggestion.
 adso - suggestions.
 
 locutusofborg - suggestions.
+
+Maouhoub - suggestion.
+
+flauta - Italian translation typos reported.
