--- a/THANKS
+++ b/THANKS
@@ -413,3 +413,9 @@ locutusofborg - suggestions.
 Maouhoub - suggestion.
 
 flauta - Italian translation typos reported.
+
+Marco Vassura - suggestion and code.
+
+Luigi Valbonesi - suggestions.
+
+fernandolordao - suggestion.
